--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -56,25 +56,24 @@ nav button {
   padding: 1em;
   padding-inline: 2em;
 }
-main {
-  display: inline-flex;
-  width: 100%;
+.main {
   padding-bottom: 6em;
   padding-top: 6em;
 }
-main div img {
+.main div img {
   border-radius: 50%;
 }
 .radiuspc {
-  width: 682px;
   text-align: right;
   padding-right: 4em;
   padding-top: 2em;
 }
+.radiuspc,
 .skill {
-  width: 682px;
+  display: inline-block;
+  width: 45%;
 }
-main div h2 {
+.main div h2 {
   font-family: "Montserrat", sans-serif;
   font-size: 1.3em;
   font-weight: bold;
@@ -83,7 +82,7 @@ main div h2 {
   line-height: 1;
   padding-top: 1em;
 }
-main div p {
+.main div p {
   font-size: 1.3em;
   padding-inline: 3em;
   line-height: 1.5;
@@ -121,8 +120,17 @@ section h3 {
   font-size: 11px;
   padding-top: 1em;
 }
-article {
-  align-items: center;
+.article {
+  text-align: center;
+}
+.boxa,
+.boxb,
+.boxc {
+  display: inline-block;
+  width: 33%;
+  overflow: hidden;
+  padding: 1em;
+  object-fit: cover;
 }
 .box1 img {
   width: 450px;
