footer and address

--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -229,6 +229,7 @@ footer {
   height: 350px;
   background-color: #26a6cb;
   color: white;
+  text-align: center;
 }
 address h4 {
   font-family: "Montserrat", sans-serif;
