--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -25,10 +25,10 @@ header div img {
 
 nav {
   background-image: url(/images/banner.jpg);
-  background-position: center;
-  background-size: 100%;
-  padding-bottom: 5em;
-  padding-top: 5em;
+  background-position: top;
+  background-size: 120%;
+  padding-bottom: 15em;
+  padding-top: 13em;
   text-align: center;
 }
 nav h1 {
@@ -122,6 +122,7 @@ section h3 {
 }
 .article {
   text-align: center;
+  padding-block: 7%;
 }
 .boxa,
 .boxb,
